plang/testing/logs/false-incorrect/193/program193.p.p
qBoB zP (Z1) (OF) :- (j7azO a (DB2x) (WhO4e) (JO4gj)).


jdi4N (kUC QZWV5 (iM (HobhH) jF (t (VTpsh) (Lb)))) NJ (s (sVEM VFu TTN v WDf) iU p).


yBTMV.
e55w (Q) MsLbs.
tFe (vP6Rn (yZZ cW) (zsj yCtjd) (w)) cfzic.
tBym (X).


s :- c8s4 m (X) (xlc (I9) (xx47 FFK4) h QJtsD) (D); (mc IkExS o2J0B (WlN1t), sHe5Q QCld (Sx); s (Qc) (SQlG) (g) p; zD (uU rz IA c (HOuF)) (gzA TJ (BXtq1) axd (C2Cu0))); (z22 B3, (kMLZy (eIDKm pZ1Il (tfbn (Pv6)) Bn) (Y) LWP7)).
uSgG (RMTA) :- (((oX W ah7qN (HmUe); iv GBi sZT9X (z), n baH1 Ww (U)))).


j4F (Wn4) xjGJx.
sxUE (b3Zp (hpZ D797b (pyHL0) (vaXW OyjfH)) SsE).


bLb9e PX PT1o0 (Ekx5y).

aL :- (zXQ md AC deyw).
yZ (n (G) (rb0s (Ld) (xakM f) E7Ol (pC)) (IFpO)) (f6oXi (rHA (niI) (l4 (E))) MGGG hE D2) im VU :- ((xN5 tx3d f D7M (Ep), ic (gy (ug8xy (De)) X (XWcVA)) z H aq, r p5cxM K (m gWZ (qgp)); (oWM (s (olJc (q2x (oJ (TG0) (P5mLS)) C) (y) (bmI (nja y9AGK co (j5)) (hMlQ (T) (KHWi) (SD5ZS) (nBWU)) (Opg) f1) R) d)); hKa ySQy (sL (tA (zs5tp (yBY A (ZKk) YwVYd)) i5xcS)) Qpnq, b ufTBt (gt3 h (Fgsk) (R)) (yglOa (Ck4ju)))).


? uS3.



